--- a/src/packages.config
+++ b/src/packages.config
@@ -35,14 +35,18 @@
   <package id="StreamJsonRpc" version="1.4.134" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Reactive" version="4.1.6" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" requireReinstallation="true" />
-  <package id="Zenseless.Geometry" version="0.5.105" targetFramework="net461" />
-  <package id="Zenseless.HLGL" version="0.5.105" targetFramework="net461" />
-  <package id="Zenseless.OpenGL" version="0.5.105" targetFramework="net461" />
-  <package id="Zenseless.Patterns" version="0.5.105" targetFramework="net461" />
+  <package id="Zenseless.Geometry" version="0.5.121" targetFramework="net461" />
+  <package id="Zenseless.HLGL" version="0.5.121" targetFramework="net461" />
+  <package id="Zenseless.OpenGL" version="0.5.121" targetFramework="net461" />
+  <package id="Zenseless.Patterns" version="0.5.121" targetFramework="net461" />
 </packages>
