--- a/src/packages.config
+++ b/src/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GLSLhelper" version="0.1.7" targetFramework="net461" />
+  <package id="GLSLhelper" version="0.1.11" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.8.525" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.9.28307" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.9.28307" targetFramework="net461" />
@@ -32,22 +32,24 @@
   <package id="Microsoft.VSSDK.BuildTools" version="15.9.3032" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="OpenTK" version="3.1.0" targetFramework="net461" />
+  <package id="OpenTK.NetStandard" version="1.0.4" targetFramework="net461" />
   <package id="Sprache" version="2.2.0" targetFramework="net461" />
   <package id="StreamJsonRpc" version="1.4.134" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Drawing.Common" version="4.5.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Reactive" version="4.1.6" targetFramework="net461" />
+  <package id="System.Reactive" version="4.3.1" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" requireReinstallation="true" />
-  <package id="Zenseless.Geometry" version="0.5.121" targetFramework="net461" />
-  <package id="Zenseless.HLGL" version="0.5.121" targetFramework="net461" />
-  <package id="Zenseless.OpenGL" version="0.5.121" targetFramework="net461" />
-  <package id="Zenseless.Patterns" version="0.5.121" targetFramework="net461" />
+  <package id="Zenseless.Geometry" version="0.5.140" targetFramework="net461" />
+  <package id="Zenseless.HLGL" version="0.5.140" targetFramework="net461" />
+  <package id="Zenseless.OpenGL" version="0.5.140" targetFramework="net461" />
+  <package id="Zenseless.Patterns" version="0.5.140" targetFramework="net461" />
 </packages>
